# CPP-Project

./: CMakeLists.txt  README.md  config.json
.github/workflows/: test.yaml
include/: Config.h  ContainmentField.h  Particle.h  Simulation.h  ThreadManager.h
src/: ContainmentField.cpp  Particle.cpp  Simulation.cpp  ThreadManager.cpp  main.cpp
